ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.frontend.rule.type: PathPrefixStrip
  name: guacamole-ingress
  namespace: guacamole
  labels:
    app: guacamole
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/workshop/"
            backend:
              service:
                name: guacamole-app
                port:
                  number: 8080
